--- a/package.json
+++ b/package.json
@@ -4,25 +4,26 @@
     "description": "",
     "main": "app.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "nodemon app.js",
-      "start-server": "node app.js"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon -L app.js",
+        "start-server": "node app.js"
     },
     "author": "Ritik sharma",
     "license": "ISC",
     "dependencies": {
-      "bcrypt": "^5.0.1",
-      "body-parser": "^1.19.0",
-      "connect-mongodb-session": "^3.1.1",
-      "dotenv": "^16.0.0",
-      "express": "^4.17.1",
-      "express-session": "^1.17.2",
-      "express-validator": "^6.14.0",
-      "jsonwebtoken": "^8.5.1",
-      "mongodb": "^4.2.0",
-      "mongoose": "^6.0.13"
+        "bcrypt": "^5.0.1",
+        "body-parser": "^1.19.0",
+        "connect-mongodb-session": "^3.1.1",
+        "dotenv": "^16.0.0",
+        "express": "^4.17.1",
+        "express-session": "^1.17.2",
+        "express-validator": "^6.14.0",
+        "jsonwebtoken": "^8.5.1",
+        "mongodb": "^4.2.0",
+        "mongoose": "^6.0.13"
     },
     "devDependencies": {
-      "ejs": "^3.1.6"
+        "ejs": "^3.1.6",
+        "nodemon": "^2.0.15"
     }
-  }
+}
