--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.2.0",
-    "mongoose": "^6.0.13"
+    "mongoose": "^6.0.13",
+    "nodemon": "^3.1.9"
   },
   "devDependencies": {
     "ejs": "^3.1.6"
