--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.2.0",
     "mongoose": "^6.0.13",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "vercel": "^41.0.2"
   },
   "devDependencies": {
     "ejs": "^3.1.6"
